--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,14 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
+}
+
+body h1, body h2, body h3, body h4 {
+  font-family: "Poppins";
+}
+body p {
+  font-family: "Inter";
 }
 
 header > nav {
@@ -43,16 +51,23 @@ header > nav > ul > li > a {
 }
 
 main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 60px;
+  display: grid;
   padding: 100px 20px;
 }
 
-.texto-principal {
-  max-width: 678px;
-  text-align: left;
+.texto-section {
+  width: 678px;
+  max-height: 227px;
+  margin: 54.56px 222px;
+}
+
+#titulo-main {
+  font-size: 60px;
+}
+
+#p-main {
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .imagem-destaque img {
@@ -62,15 +77,18 @@ main {
   display: block;
 }
 
-.btn-primary,
-.btn-secondary {
+.btn-primary, .btn-secondary {
+  min-width: 189.81px;
+  height: 62px;
+  font-weight: 300;
+}
+
+.btn-section {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   gap: 10px;
   padding: 10px 30px;
-  min-width: 140px;
-  height: 60px;
   border-radius: 6px;
   font-weight: 500;
   cursor: pointer;
@@ -80,7 +98,6 @@ main {
   background-color: var(--botao-contorno);
   color: white;
   border: 1px solid var(--botao-contorno);
-  font-weight: 300;
 }
 
 .btn-primary:hover {
@@ -92,7 +109,6 @@ main {
   background-color: transparent;
   color: var(--botao-contorno-azul);
   border: 1px solid var(--botao-contorno-azul);
-  font-weight: 300;
 }
 
 .btn-secondary:hover {
