--- a/assets/style.scss
+++ b/assets/style.scss
@@ -5,9 +5,20 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    font-family: 'Inter' , sans-serif;
 }
 
+body{
+  h1,h2,h3,h4 {
+    font-family: 'Poppins';
 
+  }
+
+  p {
+    font-family: 'Inter';
+  }
+
+}
 header > nav {
     display: flex;
     margin: auto;
@@ -47,16 +58,29 @@ header > nav > ul > li > a {
 }
 
 main {
-  display: flex;
-  align-items: center;
-  justify-content: center; 
-  gap: 60px;     
+  display: grid;    
   padding: 100px 20px;    
 }
 
-.texto-principal {
-  max-width: 678px;
-  text-align: left;
+
+.texto-section {
+width: 678px;
+max-height: 227px;
+margin: 54.56px 222px;
+  
+}
+
+.titulo-principal {
+
+}
+
+#titulo-main{
+  font-size: 60px;
+}
+
+#p-main {
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .imagem-destaque img {
@@ -66,26 +90,32 @@ main {
   display: block;
 }
 
+.btn-primary,.btn-secondary{
 
-.btn-primary,
-.btn-secondary {
+  min-width: 189.81px;
+  height: 62px;
+  font-weight: 300;
+
+}
+
+
+.btn-section {
   display: flex; 
   align-items: center; 
-  justify-content: center;
+  justify-content: left;
   gap: 10px; 
   padding: 10px 30px;
-  min-width: 140px;
-  height: 60px;
   border-radius: 6px;
   font-weight: 500;
   cursor: pointer;
 }
 
+
 .btn-primary {
   background-color: var(--botao-contorno);
   color: white;
   border: 1px solid var(--botao-contorno);
-  font-weight: 300;
+  
 }
 
 .btn-primary:hover {
@@ -97,7 +127,7 @@ main {
   background-color: transparent;
   color: var(--botao-contorno-azul);
   border: 1px solid var(--botao-contorno-azul);
-  font-weight: 300;
+  
 }
 
 .btn-secondary:hover {
