--- a/assets/style.scss
+++ b/assets/style.scss
@@ -58,7 +58,8 @@ header > nav > ul > li > a {
 }
 
 main {
-  display: grid;    
+  max-width: 100%;
+  display: grid;
   padding: 100px 20px;    
 }
 
@@ -79,15 +80,22 @@ margin: 54.56px 222px;
 }
 
 #p-main {
+  margin-top: 1.5rem;
   font-size: 20px;
   font-weight: 300;
 }
 
-.imagem-destaque img {
-  max-width: 500px;
-  width: 100%;
-  height: auto;
-  display: block;
+.imagem-section {
+
+  min-width: 410,17px;
+  min-height: 424px;
+  display: flex;
+  justify-content: end;
+  margin: 752,56px 182px;
+  
+
+
+
 }
 
 .btn-primary,.btn-secondary{
